--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -11,15 +11,6 @@
   publisher = {Elsevier},
 }
 
-@CONFERENCE{confbib2,
-  author = {Фамилия, И. О.},
-  title = {название тезисов конференции},
-  booktitle = {Название сборника},
-  year = {2015},
-  language = {russian},
-  authorconf = {true},
-}
-
 @Article{qian2007interharmonics,
   author    = {Qian, Hao and Zhao, Rongxiang and Chen, Tong},
   journal   = {IEEE Transactions on Power Delivery},
@@ -725,11 +716,10 @@
 
 @InProceedings{ramos2005synchronizing,
   author    = {Ramos, Carlos and Martins, A and Carvalho, Adriano},
-  title     = {Synchronizing renewable energy sources in distributed generation systems},
   booktitle = {Proc. Int. Conf. Renew. Energy Power Qual.(ICREPQ), Zaragoza, Spain},
+  title     = {Synchronizing renewable energy sources in distributed generation systems},
   year      = {2005},
   pages     = {1--5},
-  url       = {https://s3.amazonaws.com/academia.edu.documents/50836075/Synchronizing_Renewable_Energy_Sources_i20161211-14554-1antncf.pdf?response-content-disposition=inline%3B%20filename%3DSynchronizing_Renewable_Energy_Sources_i.pdf&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWOWYYGZ2Y53UL3A%2F20200218%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20200218T071022Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&X-Amz-Signature=38f244e8a5b914bbb46aeec93d02734c0ed5147a0c5ca4fd67863216d20501f1},
 }
 
 @Article{tretter1985estimating,
@@ -2254,6 +2244,77 @@
   pages     = {134--140},
   volume    = {8},
   publisher = {Optical Society of America},
+}
+
+@Article{winograd1978computing,
+  author  = {Winograd, Shmuel},
+  journal = {Mathematics of computation},
+  title   = {On computing the discrete Fourier transform},
+  year    = {1978},
+  number  = {141},
+  pages   = {175--199},
+  volume  = {32},
+}
+
+@Book{nussbaumer1985fast,
+  author    = {Нуссбаумер, Генри},
+  publisher = {Радио и связь},
+  title     = {Быстрое преобразование Фурье и алгоритмы вычисления сверток},
+  year      = {1985},
+}
+
+@Article{1457487,
+  author  = {Blahut, R.E.},
+  journal = {Proceedings of the IEEE},
+  title   = {Algebraic fields, signal processing, and error control},
+  year    = {1985},
+  number  = {5},
+  pages   = {874-893},
+  volume  = {73},
+  doi     = {10.1109/PROC.1985.13219},
+}
+
+@Article{Goryunov2009definition,
+  author  = {Горюнов, ВН and Осипов, ДС and Лютаревич, АГ},
+  journal = {Электро. Электротехника, электроэнергетика, электротехническая промышленность},
+  title   = {Определение управляющего воздействия активного фильтра гармоник},
+  year    = {2009},
+  number  = {6},
+  pages   = {20--24},
+}
+
+@Misc{zhezhelenko2010highest,
+  author = {Жежеленко, Игорь Владимирович},
+  title  = {Высшие гармоники в системах электроснабжения промпредприятий},
+  year   = {2010},
+}
+
+@Article{Cheremisin2007method,
+  author    = {Черемисин, Василий Титович and Грицутенко, Станислав Семенович},
+  journal   = {Вестник Ростовского государственного университета путей сообщения},
+  title     = {Способ повышения точности измерения гармонических составляющих тягового тока и напряжения},
+  year      = {2007},
+  number    = {2},
+  pages     = {94--99},
+  publisher = {Федеральное государственное бюджетное образовательное учреждение высшего~…},
+}
+
+@InCollection{Cheremisin1985method,
+  author    = {Черемисин, ВТ and Дубовик, ЕП},
+  booktitle = {Динамика электрических машин},
+  title     = {Способ расчета высших гармоник, генерируемых несколькими электротяговыми нагрузками},
+  year      = {1985},
+  pages     = {150--153},
+}
+
+@Article{luo2016interpolated,
+  author    = {Luo, Jiufei and Xie, Zhijiang and Xie, Ming},
+  journal   = {Mechanical Systems and Signal Processing},
+  title     = {Interpolated DFT algorithms with zero padding for classic windows},
+  year      = {2016},
+  pages     = {1011--1025},
+  volume    = {70},
+  publisher = {Elsevier},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
