--- a/Synopsis/title.tex
+++ b/Synopsis/title.tex
@@ -8,7 +8,7 @@
         \rule[0pt]{0pt}{1.5cm}
     }{
         %\includegraphics[height=1.5cm]{personal-signature.png}
-        \includegraphics[height=1.5cm]{signature.jpg}
+        \includegraphics[height=1.5cm]{signature2.jpg}
     }\\
 \end{tabularx}
 
